[project]
name = "searchimage"
version = "0.1.0"
description = "An image search tool using CLIP and Faiss"
authors = [{name = "Ray Lam", email = "1027196450@qq.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clip",
    "faiss-cpu>=1.11.0",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
clip = { git = "https://github.com/openai/CLIP.git" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
